# engram

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXTENSIONS.md  EXTENSION_ARCHITECTURE.md  SECURITY.md  dreamer-edge-limiting.md  entity-intelligence-summary.md
engram/: __init__.py  auth.py  client.py  config.py  db.py  dreamer.py  embeddings.py  errors.py  main.py  middleware.py  migrate.py  models.py  read_path.py  reconsolidation.py  scheduler.py  tracing.py  write_path.py
migrations/: 001_initial.sql  002_api_keys.sql  003_entity_link_edge.sql  003_structural_edge.sql  004_metaplasticity.sql  005_metadata_enmotiv_id_index.sql  006_partition_and_enmotiv_id.sql  006_stdp_directional_weights.sql  007_metadata_type.sql
tests/: conftest.py  test_amygdala_asymmetry.py  test_api_integration.py  test_attractor.py  test_batch_enrich.py  test_brain_region_plugin.py  test_client_sdk.py  test_config.py  test_context_retrieval.py  test_continuous_jobs.py  test_db_smoke.py  test_db_unit.py  test_dreamer.py  test_dreamer_jobs.py  test_dreamer_unit.py  test_edge_store.py  test_embeddings_unit.py  test_forgetting.py  test_graph_generation.py  test_graph_store.py  test_header_search.py  test_memory_store.py  test_metaplasticity.py  test_middleware.py  test_migrate_unit.py  test_models_unit.py  test_modulatory_discovery.py  test_multi_plugin.py  test_phase_interaction.py  test_plugin_pipeline.py  (+15 more)
(+82 files in other folders)
